--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "immutability-helper": "^3.1.1",
     "next": "13.4.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
